# Rust-screenshot

./: .gitignore  Cargo.toml  LICENSE  README.md
screen-grabber/: Cargo.toml
screen-grabber/src/: main.rs
src/: main.rs
