[package]
name = "rust-screenshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
env_logger = "0.10.0"
screenshots = "0.8.4"
image = { version = "0.24", features = ["jpeg", "png"] }
tinyfiledialogs = "3.9.1"
device_query = "1.1.3"
winit = "0.29.3"
rfd = "0.12.1"
arboard = "3.3.0"
